<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grd"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/name_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/dark_green_and_light_green_modern_gradient_health_products_health_logo" />

    <TextView
        android:layout_below="@+id/name_logo"
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/login_account"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/line_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_account"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/line_below_crt_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/login_account"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:textColor="#fff"
                android:textColorHint="#A5A5A5" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:padding="7dp"
                android:src="@drawable/phone" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="29dp"
            app:cardBackgroundColor="#56BECC"
            app:cardCornerRadius="9dp">

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/login_account"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:text="@string/do_not_have_account"
                android:textColor="#fff" />

            <androidx.cardview.widget.CardView
                android:id="@+id/register"
                android:layout_width="110dp"
                android:layout_height="40dp"
                app:cardBackgroundColor="#FFC0C0"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:textColor="#E60E0E" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>